--- a/index.html
+++ b/index.html
@@ -1,10 +1,56 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./fonts/fonts.css">
+  <link rel="stylesheet" href="./styles/global.css">
+  <link rel="stylesheet" href="./styles/style.css">
+  <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+</head>
+
+<body>
+  <div class="page">
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a href="" class="header__link header__link_active">главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a href="" class="header__link">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a href="" class="header__link">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header__logo" href="">
+        <img class="header__logo-image" src="./images/logo-black.svg" alt="Логотип">
+      </a>
+      <address class="address">
+        <ul class="header__links-list header__links-list_type_adress">
+          <li class="header__links-list-item">
+            <a href="tel:+99995555555" class="header__link header__link_type_adress">+9 999 555 5555</a>
+          </li>
+          <li class="header__links-list-item">
+            <a href="mailto:info@sobaka.ge" class="header__link header__link_type_adress">info@sobaka.ge</a>
+          </li>
+          <li class="header__links-list-item">
+            наб. Принсенграхт 263-265, Амстердам
+          </li>
+        </ul>
+      </address>
+    </header>
+    <main>
+      <section class="cover">
+        <div class="overlay"></div>
+
+      </section>
+    </main>
+  </div>
+</body>
+
 </html>
