--- a/index.html
+++ b/index.html
@@ -1,56 +1,141 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./fonts/fonts.css">
-  <link rel="stylesheet" href="./styles/global.css">
-  <link rel="stylesheet" href="./styles/style.css">
-  <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-</head>
-
-<body>
-  <div class="page">
-    <header class="header">
-      <nav class="header__menu">
-        <ul class="header__links-list">
-          <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a href="" class="header__link header__link_active">главная</a>
-          </li>
-          <li class="header__links-list-item">
-            <a href="" class="header__link">посмотреть лоты</a>
-          </li>
-          <li class="header__links-list-item">
-            <a href="" class="header__link">об аукционе</a>
-          </li>
-        </ul>
-      </nav>
-      <a class="header__logo" href="">
-        <img class="header__logo-image" src="./images/logo-black.svg" alt="Логотип">
-      </a>
-      <address class="address">
-        <ul class="header__links-list header__links-list_type_adress">
-          <li class="header__links-list-item">
-            <a href="tel:+99995555555" class="header__link header__link_type_adress">+9 999 555 5555</a>
-          </li>
-          <li class="header__links-list-item">
-            <a href="mailto:info@sobaka.ge" class="header__link header__link_type_adress">info@sobaka.ge</a>
-          </li>
-          <li class="header__links-list-item">
-            наб. Принсенграхт 263-265, Амстердам
-          </li>
-        </ul>
-      </address>
-    </header>
-    <main>
-      <section class="cover">
-        <div class="overlay"></div>
-
-      </section>
-    </main>
-  </div>
-</body>
-
+  <body>
+    <div class="page">
+      <header class="header">
+        <nav class="header__menu">
+          <ul class="header__links-list">
+            <li
+              class="header__links-list-item header__links-list-item_no-bullit"
+            >
+              <a href="" class="header__link header__link_active">главная</a>
+            </li>
+            <li class="header__links-list-item">
+              <a href="" class="header__link">посмотреть лоты</a>
+            </li>
+            <li class="header__links-list-item">
+              <a href="" class="header__link">об аукционе</a>
+            </li>
+          </ul>
+        </nav>
+        <a class="header__logo" href="">
+          <img
+            class="header__logo-image"
+            src="./images/logo-black.svg"
+            alt="Логотип"
+          />
+        </a>
+        <address class="address">
+          <ul class="header__links-list header__links-list_type_adress">
+            <li class="header__links-list-item">
+              <a
+                href="tel:+99995555555"
+                class="header__link header__link_type_adress"
+                >+9 999 555 5555</a
+              >
+            </li>
+            <li class="header__links-list-item">
+              <a
+                href="mailto:info@sobaka.ge"
+                class="header__link header__link_type_adress"
+                >info@sobaka.ge</a
+              >
+            </li>
+            <li class="header__links-list-item">
+              наб. Принсенграхт 263-265, Амстердам
+            </li>
+          </ul>
+        </address>
+      </header>
+      <main>
+        <section class="cover">
+          <div class="overlay"></div>
+          <h1 class="cover__title">
+            о<span class="letter-spacing-extended">но</span>
+            <span class="aligned-text aligned-text_center"
+              >те<span class="letter-spacing-extended">бе</span></span
+            >
+            <span class="aligned-text aligned-text_right">
+              <span class="letter-spacing-extended">н</span>ад<span
+                class="no-letter-spacing"
+                >о</span
+              >
+            </span>
+          </h1>
+          <div class="cover__description">
+            <p class="cover__description-text">
+              аукцион вещей, в которые никто не верил
+            </p>
+            <button type="button" class="bet-button">сделать ставку</button>
+          </div>
+        </section>
+        <section class="lots">
+          <h2 class="lots__heading">лоты</h2>
+          <ul class="lots__card-list">
+            <li class="lots__card-list-item">
+              <a href="" class="card-link">
+                <article class="card">
+                  <div class="overlay"></div>
+                  <h3 class="card__title">
+                    Фильм режиссёра, который бросил киношколу
+                  </h3>
+                  <p class="card__text">
+                    Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                    ставка, если бы вы не знали, что режиссёр — Пол Томас
+                    Андерсон?
+                  </p>
+                </article>
+              </a>
+            </li>
+            <li class="lots__card-list-item">
+              <a href="" class="card-link">
+                <article class="card">
+                  <div class="overlay"></div>
+                  <h3 class="card__title">
+                    Книга, где описан один скучный день из жизни рекламного
+                    агента
+                  </h3>
+                  <p class="card__text">
+                    Объёмом почти в тысячу страниц. Иногда без знаков препинания
+                    и с переходами на древнеанглийский. В ней одновременно
+                    рассказывается о 16 июня 1904 года и об истории литературы,
+                    начиная с античных времён. И это всё накладывается на
+                    эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                    Джеймса Джойса?
+                  </p>
+                </article>
+              </a>
+            </li>
+            <li class="lots__card-list-item">
+              <a href="" class="card-link">
+                <article class="card">
+                  <div class="overlay"></div>
+                  <h3 class="card__title">
+                    Картина, которую повторит даже 5-летний сын маминой подруги
+                  </h3>
+                  <p class="card__text">
+                    Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                    что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                    котиков… Сколько бы вы на такое поставили, если бы не знали,
+                    что это — одна из революционных работ Кандинского?
+                  </p>
+                </article>
+              </a>
+            </li>
+          </ul>
+          <a href="" class="lots__look-more-link">посмотреть больше</a>
+        </section>
+      </main>
+    </div>
+  </body>
 </html>
