--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <ul class="lots__card-list">
             <li class="lots__card-list-item">
               <a href="" class="card-link">
-                <article class="card">
+                <article class="card card_type_film">
                   <div class="overlay"></div>
                   <h3 class="card__title">
                     Фильм режиссёра, который бросил киношколу
@@ -99,7 +99,7 @@
             </li>
             <li class="lots__card-list-item">
               <a href="" class="card-link">
-                <article class="card">
+                <article class="card card_type_book">
                   <div class="overlay"></div>
                   <h3 class="card__title">
                     Книга, где описан один скучный день из жизни рекламного
@@ -118,7 +118,7 @@
             </li>
             <li class="lots__card-list-item">
               <a href="" class="card-link">
-                <article class="card">
+                <article class="card card_type_picture">
                   <div class="overlay"></div>
                   <h3 class="card__title">
                     Картина, которую повторит даже 5-летний сын маминой подруги
