--- a/index.html
+++ b/index.html
@@ -13,49 +13,51 @@
   <body>
     <div class="page">
       <header class="header">
-        <nav class="header__menu">
-          <ul class="header__links-list">
-            <li
-              class="header__links-list-item header__links-list-item_no-bullit"
-            >
-              <a href="" class="header__link header__link_active">главная</a>
-            </li>
-            <li class="header__links-list-item">
-              <a href="" class="header__link">посмотреть лоты</a>
-            </li>
-            <li class="header__links-list-item">
-              <a href="" class="header__link">об аукционе</a>
-            </li>
-          </ul>
-        </nav>
-        <a class="header__logo" href="">
-          <img
-            class="header__logo-image"
-            src="./images/logo-black.svg"
-            alt="Логотип"
-          />
-        </a>
-        <address class="address">
-          <ul class="header__links-list header__links-list_type_adress">
-            <li class="header__links-list-item">
-              <a
-                href="tel:+99995555555"
-                class="header__link header__link_type_adress"
-                >+9 999 555 5555</a
+        <div class="header__column">
+          <nav class="header__menu">
+            <ul class="header__links-list">
+              <li
+                class="header__links-list-item header__links-list-item_no-bullit"
               >
-            </li>
-            <li class="header__links-list-item">
-              <a
-                href="mailto:info@sobaka.ge"
-                class="header__link header__link_type_adress"
-                >info@sobaka.ge</a
-              >
-            </li>
-            <li class="header__links-list-item">
-              наб. Принсенграхт 263-265, Амстердам
-            </li>
-          </ul>
-        </address>
+                <a href="" class="header__link header__link_active">главная</a>
+              </li>
+              <li class="header__links-list-item">
+                <a href="" class="header__link">посмотреть лоты</a>
+              </li>
+              <li class="header__links-list-item">
+                <a href="" class="header__link">об аукционе</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="header__column">
+          <a class="header__logo" href="">
+            <img
+              class="header__logo-image"
+              src="./images/logo-black.svg"
+              alt="Логотип"
+            />
+          </a>
+        </div>
+        <div class="header__column">
+          <address class="address header__address">
+            <ul class="address__links-list">
+              <li class="address__links-list-item">
+                <a href="tel:+99995555555" class="address__link"
+                  >+9 999 555 5555</a
+                >
+              </li>
+              <li class="address__links-list-item">
+                <a href="mailto:info@sobaka.ge" class="address__link"
+                  >info@sobaka.ge</a
+                >
+              </li>
+              <li class="address__links-list-item">
+                наб. Принсенграхт 263-265, Амстердам
+              </li>
+            </ul>
+          </address>
+        </div>
       </header>
       <main>
         <section class="cover">
@@ -135,7 +137,102 @@
           </ul>
           <a href="" class="lots__look-more-link">посмотреть больше</a>
         </section>
+        <section class="about">
+          <div class="about__column">
+            <div class="about__logo">
+              <img
+                src="./images/logo-white.svg"
+                alt="Логотип на черном фоне"
+                class="about__logo-image"
+              />
+            </div>
+          </div>
+          <div class="about__column about__column_width_two-thirds">
+            <h3 class="about__title">Об аукционе</h3>
+            <div class="about__text-container">
+              <p class="about__text">
+                Здесь вы не встретите очередное пафосное собрание невероятно
+                дорогого антиквариата. Наши лоты вообще не должны были попасть
+                ни на один аукцион. Потому что кому нужен дневник
+                девочки-подростка или картина, которую может нарисовать даже
+                ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+              </p>
+              <p class="about__text">
+                Слишком сложные или, наоборот, слишком простые. Опережающие своё
+                время. В пух и прах растерзанные критиками. Непринятые и
+                непонятые. Когда-то они казались просто неудачными. Но, несмотря
+                на критику, кажущуюся простоту или сложность, сейчас без этих
+                лотов невозможно представить современную культуру. Когда в эти
+                вещи не верил никто, продолжали верить их создатели. И сейчас
+                эти лоты стали культовыми.
+              </p>
+            </div>
+          </div>
+        </section>
       </main>
+      <footer class="footer">
+        <address class="address">
+          <ul class="address__links-list">
+            <li class="address__links-list-item">
+              <a href="tel:+99995555555" class="address__link"
+                >+9 999 555 5555</a
+              >
+            </li>
+            <li class="address__links-list-item">
+              <a href="mailto:info@sobaka.ge" class="address__link"
+                >info@sobaka.ge</a
+              >
+            </li>
+            <li class="address__links-list-item">
+              наб. Принсенграхт 263-265, Амстердам
+            </li>
+          </ul>
+        </address>
+        <nav class="footer__menu">
+          <ul class="footer__menu-list">
+            <li class="footer__menu-list-item">
+              <a href="" class="footer__menu-link footer__menu-link_active"
+                >главная</a
+              >
+            </li>
+            <li class="footer__menu-list-item">
+              <a href="" class="footer__menu-link">посмотреть лоты</a>
+            </li>
+            <li class="footer__menu-list-item">
+              <a href="" class="footer__menu-link">об аукционе</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="footer__social-list">
+          <li class="footer__social-list-item">
+            <a href="" class="footer__social-link">
+              <img
+                src="./images/yt.svg"
+                alt="Иконка ютуб"
+                class="footer__social-icon"
+              />
+            </a>
+          </li>
+          <li class="footer__social-list-item">
+            <a href="" class="footer__social-link">
+              <img
+                src="./images/vk.svg"
+                alt="Иконка ВК"
+                class="footer__social-icon"
+              />
+            </a>
+          </li>
+          <li class="footer__social-list-item">
+            <a href="" class="footer__social-link">
+              <img
+                src="./images/pinterest.svg"
+                alt="Иконка Пинтерест"
+                class="footer__social-icon"
+              />
+            </a>
+          </li>
+        </ul>
+      </footer>
     </div>
   </body>
 </html>
