--- a/index.html
+++ b/index.html
@@ -13,42 +13,42 @@
   <body>
     <div class="page">
       <header class="header">
-        <div class="header__column">
+
           <nav class="header__menu">
             <ul class="header__links-list">
               <li
                 class="header__links-list-item header__links-list-item_no-bullit"
               >
-                <a href="" class="header__link header__link_active">главная</a>
+                <a href="" class="header__link header__link_active link-text-hover">главная</a>
               </li>
               <li class="header__links-list-item">
-                <a href="" class="header__link">посмотреть лоты</a>
+                <a href="" class="header__link link-text-hover">посмотреть лоты</a>
               </li>
               <li class="header__links-list-item">
-                <a href="" class="header__link">об аукционе</a>
+                <a href="" class="header__link link-text-hover">об аукционе</a>
               </li>
             </ul>
           </nav>
-        </div>
-        <div class="header__column">
-          <a class="header__logo" href="">
+
+
+          <a class="header__logo link-box-hover" href="">
             <img
               class="header__logo-image"
               src="./images/logo-black.svg"
               alt="Логотип"
             />
           </a>
-        </div>
-        <div class="header__column">
+
+
           <address class="address header__address">
             <ul class="address__links-list">
               <li class="address__links-list-item">
-                <a href="tel:+99995555555" class="address__link"
+                <a href="tel:+99995555555" class="address__link link-text-hover"
                   >+9 999 555 5555</a
                 >
               </li>
               <li class="address__links-list-item">
-                <a href="mailto:info@sobaka.ge" class="address__link"
+                <a href="mailto:info@sobaka.ge" class="address__link link-text-hover"
                   >info@sobaka.ge</a
                 >
               </li>
@@ -57,13 +57,13 @@
               </li>
             </ul>
           </address>
-        </div>
+
       </header>
       <main>
         <section class="cover">
-          <div class="overlay"></div>
           <h1 class="cover__title">
-            о<span class="letter-spacing-extended">но</span>
+            <span class="aligned-text">            о<span class="letter-spacing-extended">но</span></span>
+
             <span class="aligned-text aligned-text_center"
               >те<span class="letter-spacing-extended">бе</span></span
             >
@@ -85,9 +85,8 @@
           <h2 class="lots__heading">лоты</h2>
           <ul class="lots__card-list">
             <li class="lots__card-list-item">
-              <a href="" class="card-link">
+              <a href="" class="card-link link-box-hover">
                 <article class="card card_type_film">
-                  <div class="overlay"></div>
                   <h3 class="card__title">
                     Фильм режиссёра, который бросил киношколу
                   </h3>
@@ -100,9 +99,8 @@
               </a>
             </li>
             <li class="lots__card-list-item">
-              <a href="" class="card-link">
+              <a href="" class="card-link link-box-hover">
                 <article class="card card_type_book">
-                  <div class="overlay"></div>
                   <h3 class="card__title">
                     Книга, где описан один скучный день из жизни рекламного
                     агента
@@ -119,9 +117,8 @@
               </a>
             </li>
             <li class="lots__card-list-item">
-              <a href="" class="card-link">
-                <article class="card card_type_picture">
-                  <div class="overlay"></div>
+              <a href="" class="card-link link-box-hover">
+                <article class="card card_type_picture overlay">
                   <h3 class="card__title">
                     Картина, которую повторит даже 5-летний сын маминой подруги
                   </h3>
@@ -135,7 +132,7 @@
               </a>
             </li>
           </ul>
-          <a href="" class="lots__look-more-link">посмотреть больше</a>
+          <a href="" class="lots__look-more-link link-text-hover">посмотреть больше</a>
         </section>
         <section class="about">
           <div class="about__column">
@@ -147,7 +144,7 @@
               />
             </div>
           </div>
-          <div class="about__column about__column_width_two-thirds">
+          <div class="about__column about__column_width_large">
             <h2 class="about__title">Об аукционе</h2>
             <div class="about__text-container">
               <p class="about__text">
@@ -174,12 +171,12 @@
         <address class="address">
           <ul class="address__links-list">
             <li class="address__links-list-item">
-              <a href="tel:+99995555555" class="address__link"
+              <a href="tel:+99995555555" class="address__link link-text-hover"
                 >+9 999 555 5555</a
               >
             </li>
             <li class="address__links-list-item">
-              <a href="mailto:info@sobaka.ge" class="address__link"
+              <a href="mailto:info@sobaka.ge" class="address__link link-text-hover"
                 >info@sobaka.ge</a
               >
             </li>
@@ -191,15 +188,15 @@
         <nav class="footer__menu">
           <ul class="footer__menu-list">
             <li class="footer__menu-list-item">
-              <a href="" class="footer__menu-link footer__menu-link_active"
+              <a href="" class="footer__menu-link footer__menu-link_active link-text-hover"
                 >главная</a
               >
             </li>
             <li class="footer__menu-list-item">
-              <a href="" class="footer__menu-link">посмотреть лоты</a>
+              <a href="" class="footer__menu-link link-text-hover">посмотреть лоты</a>
             </li>
             <li class="footer__menu-list-item">
-              <a href="" class="footer__menu-link">об аукционе</a>
+              <a href="" class="footer__menu-link link-text-hover">об аукционе</a>
             </li>
           </ul>
         </nav>
