fix: Заменить комбинированные селекторы на псевдомикс

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <body>
     <div class="page">
       <header class="header">
-
           <nav class="header__menu">
             <ul class="header__links-list">
               <li
@@ -29,8 +28,6 @@
               </li>
             </ul>
           </nav>
-
-
           <a class="header__logo link-box-hover" href="">
             <img
               class="header__logo-image"
@@ -38,8 +35,6 @@
               alt="Логотип"
             />
           </a>
-
-
           <address class="address header__address">
             <ul class="address__links-list">
               <li class="address__links-list-item">
@@ -57,10 +52,9 @@
               </li>
             </ul>
           </address>
-
       </header>
       <main>
-        <section class="cover">
+        <section class="cover overlay">
           <h1 class="cover__title">
             <span class="aligned-text">            о<span class="letter-spacing-extended">но</span></span>
 
@@ -86,7 +80,7 @@
           <ul class="lots__card-list">
             <li class="lots__card-list-item">
               <a href="" class="card-link link-box-hover">
-                <article class="card card_type_film">
+                <article class="card card_type_film overlay">
                   <h3 class="card__title">
                     Фильм режиссёра, который бросил киношколу
                   </h3>
@@ -100,7 +94,7 @@
             </li>
             <li class="lots__card-list-item">
               <a href="" class="card-link link-box-hover">
-                <article class="card card_type_book">
+                <article class="card card_type_book overlay">
                   <h3 class="card__title">
                     Книга, где описан один скучный день из жизни рекламного
                     агента
