--- a/index.html
+++ b/index.html
@@ -13,50 +13,60 @@
   <body>
     <div class="page">
       <header class="header">
-          <nav class="header__menu">
-            <ul class="header__links-list">
-              <li
-                class="header__links-list-item header__links-list-item_no-bullit"
+        <nav class="header__menu">
+          <ul class="header__links-list">
+            <li
+              class="header__links-list-item header__links-list-item_no-bullit"
+            >
+              <a
+                href=""
+                class="header__link header__link_active link-text-hover"
+                >главная</a
               >
-                <a href="" class="header__link header__link_active link-text-hover">главная</a>
-              </li>
-              <li class="header__links-list-item">
-                <a href="" class="header__link link-text-hover">посмотреть лоты</a>
-              </li>
-              <li class="header__links-list-item">
-                <a href="" class="header__link link-text-hover">об аукционе</a>
-              </li>
-            </ul>
-          </nav>
-          <a class="header__logo link-box-hover" href="">
-            <img
-              class="header__logo-image"
-              src="./images/logo-black.svg"
-              alt="Логотип"
-            />
-          </a>
-          <address class="address header__address">
-            <ul class="address__links-list">
-              <li class="address__links-list-item">
-                <a href="tel:+99995555555" class="address__link link-text-hover"
-                  >+9 999 555 5555</a
-                >
-              </li>
-              <li class="address__links-list-item">
-                <a href="mailto:info@sobaka.ge" class="address__link link-text-hover"
-                  >info@sobaka.ge</a
-                >
-              </li>
-              <li class="address__links-list-item">
-                наб. Принсенграхт 263-265, Амстердам
-              </li>
-            </ul>
-          </address>
+            </li>
+            <li class="header__links-list-item">
+              <a href="" class="header__link link-text-hover"
+                >посмотреть лоты</a
+              >
+            </li>
+            <li class="header__links-list-item">
+              <a href="" class="header__link link-text-hover">об аукционе</a>
+            </li>
+          </ul>
+        </nav>
+        <a class="header__logo link-box-hover" href="">
+          <img
+            class="header__logo-image"
+            src="./images/logo-black.svg"
+            alt="Логотип"
+          />
+        </a>
+        <address class="address header__address">
+          <ul class="address__links-list">
+            <li class="address__links-list-item">
+              <a href="tel:+99995555555" class="address__link link-text-hover"
+                >+9 999 555 5555</a
+              >
+            </li>
+            <li class="address__links-list-item">
+              <a
+                href="mailto:info@sobaka.ge"
+                class="address__link link-text-hover"
+                >info@sobaka.ge</a
+              >
+            </li>
+            <li class="address__links-list-item">
+              наб. Принсенграхт 263-265, Амстердам
+            </li>
+          </ul>
+        </address>
       </header>
       <main>
         <section class="cover overlay">
           <h1 class="cover__title">
-            <span class="aligned-text">            о<span class="letter-spacing-extended">но</span></span>
+            <span class="aligned-text">
+              о<span class="letter-spacing-extended">но</span></span
+            >
 
             <span class="aligned-text aligned-text_center"
               >те<span class="letter-spacing-extended">бе</span></span
@@ -126,7 +136,9 @@
               </a>
             </li>
           </ul>
-          <a href="" class="lots__look-more-link link-text-hover">посмотреть больше</a>
+          <a href="" class="lots__look-more-link link-text-hover"
+            >посмотреть больше</a
+          >
         </section>
         <section class="about">
           <div class="about__column">
@@ -170,7 +182,9 @@
               >
             </li>
             <li class="address__links-list-item">
-              <a href="mailto:info@sobaka.ge" class="address__link link-text-hover"
+              <a
+                href="mailto:info@sobaka.ge"
+                class="address__link link-text-hover"
                 >info@sobaka.ge</a
               >
             </li>
@@ -182,15 +196,21 @@
         <nav class="footer__menu">
           <ul class="footer__menu-list">
             <li class="footer__menu-list-item">
-              <a href="" class="footer__menu-link footer__menu-link_active link-text-hover"
+              <a
+                href=""
+                class="footer__menu-link footer__menu-link_active link-text-hover"
                 >главная</a
               >
             </li>
             <li class="footer__menu-list-item">
-              <a href="" class="footer__menu-link link-text-hover">посмотреть лоты</a>
+              <a href="" class="footer__menu-link link-text-hover"
+                >посмотреть лоты</a
+              >
             </li>
             <li class="footer__menu-list-item">
-              <a href="" class="footer__menu-link link-text-hover">об аукционе</a>
+              <a href="" class="footer__menu-link link-text-hover"
+                >об аукционе</a
+              >
             </li>
           </ul>
         </nav>
